--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,9 @@ jobs:
     - name: Set Node.js 16
       uses: actions/setup-node@v2.4.1
       with:
-        node-version: 16
+        node-version: 16.13.2
     - name: Install dependencies
-      run: npm i
+      run: npm ci
     - name: Build
       run: npm run build --if-present
     - name: Deploy
