--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build
+      env:
+        CI: false
       run: npm run build --if-present
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
